--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                 <p class="ml-8">Scan to download</p>
             </div>
             <div class="bg-white w-[750px] h-48">
-                <img class="w-36 h-36 mt-6 ml-6 inline" src="Uber-App.jpg" alt="">
+                <img class="w-36 h-36 mt-6 ml-6 inline mr-40" src="Uber-App.jpg" alt="">
                 <h1 class="font-bold text-4xl ml-8 inline">Download the Driver App</h1>
                 <p class="ml-8">Scan to download</p>
             </div>
