--- a/index.html
+++ b/index.html
@@ -155,12 +155,12 @@
         <div class="flex ml-44">
             <div class="bg-white w-[750px] h-48 mr-8">
                 <img class="w-36 h-36 mt-6 ml-6 inline" src="Uber-App.jpg" alt="">
-                <h1 class="font-bold text-4xl ml-8 inline">Download the Uber App</h1>
+                <h1 class="font-bold text-3xl ml-8 inline">Download the Uber App</h1>
                 <p class="ml-8">Scan to download</p>
             </div>
-            <div class="bg-white w-[750px] h-48">
+            <div class="bg-white w-[750px] h-48 mr-40">
                 <img class="w-36 h-36 mt-6 ml-6 inline" src="Uber-App.jpg" alt="">
-                <h1 class="font-bold text-4xl ml-8 inline">Download the Driver App</h1>
+                <h1 class="font-bold text-3xl ml-8 inline">Download the Driver App</h1>
                 <p class="ml-8">Scan to download</p>
             </div>
         </div>
