--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                 <h1 class="font-bold text-3xl ml-8 inline">Download the Driver App</h1>
         </div>
     </div>
-    <div class="h-full bg-black">
+    <div class="bg-black">
         <h1 class="font-medium text-white text-3xl ml-44 pt-40">Uber</h1>
         <p class="text-white ml-44 mt-12 text-2xl">Visit Help Center</p>
 
