--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                 <p class="ml-8">Scan to download</p>
         </div>
     </div>
-    <div class="h-full bg-black">
+    <div class="bg-black">
         <h1 class="font-medium text-white text-3xl ml-44 pt-40">Uber</h1>
         <p class="text-white ml-44 mt-12 text-2xl">Visit Help Center</p>
 
